added empty tests for Node and NodeID, added dependency for jUnit5